# dMATH

./: README.md  RELEASES.md
dashprove/: CLAUDE_CODE_RS-FORMAL-VERIFICATION-REQUIREMENTS.md  Cargo.toml  DASHPROVE-ENHANCEMENTS-FOR-AGENT-VERIFICATION.md  DASHTERM2-FORMAL-VERIFICATION-REQUIREMENTS.md  FEATURE_REQUEST_AGENT_VERIFICATION.md  PHASE_12_ADDITIONAL_TOOLS.md  PHASE_12_COMPREHENSIVE_TOOLS.md  README.md  WORKER_STATUS.md
dashprove/.githooks/: pre-commit
dashprove/blog/: introducing-dashprove.md
dashprove/docs/: AGENT_VERIFICATION_GUIDE.md  API_REFERENCE.md  BACKEND_GUIDE.md  DASHFLOW_INTEGRATION.md  DESIGN.md  INTEGRATION_EXAMPLES.md  MOTIVATION.md  QUICKSTART.md  RAG_EXPERT_SYSTEM_PLAN.md  ROADMAP.md  SUGGESTIONS_FROM_MPS_VERIFICATION.md  USL_SPECIFICATION.md
dashprove/examples/: .gitignore
dashprove/scripts/: install-hooks.sh
dashprove/tests/: integration.rs
dashprove/usl/: contracts.usl  graph.usl  metal.usl  prelude.usl  temporal.usl
gamma-crown/: .gitignore  .source-commit  2026-01-05-you-are-manager-git-pull-check-and-respond-to-an.txt  Cargo.toml  Makefile  PLAN-crush-vnncomp.md  PLAN-gamma-crown-v2.REVIEW.md  PLAN-gamma-crown-v2.md  PLAN-gamma-crown-v3.md  PLAN-tla2-nextgen-model-checker.md  PLAN-trust-stack-and-roadmaps.md  PLAN-win-everything-2025-2026.md  README.md  RESEARCH-nn-verification-for-OR.md  ROADMAP.md  TRUST_FEATURE_REQUEST.md
gamma-crown/benchmarks/: .gitignore  auto_lirpa_reference.py  compare_attention.py  compare_autolirpa.py  conftest.py  download_benchmarks.sh  gamma_crown_benchmark.rs  requirements.txt  test_acasxu.py  test_autolirpa_acasxu.py  test_crown_simple.py  test_vnncomp.py
gamma-crown/docs/: ANALYSIS-resnet-verification-gap-2026-01-06.md  ANALYSIS-resnet-verification-gap-root-cause-2026-01-07.md  BATTLE-PLAN.md  BENCHMARKS.md  COMPETING-SYSTEMS.md  DESIGN-analytic-alpha-gradients.md  DESIGN.md  GCP-CROWN-ANALYSIS.md  MASTER-CHECKLIST.md  PLAN-benchmark-framework.md  PLAN-close-gaps.md  PLAN-comprehensive-optimizations.md  PLAN-fix-transformer-explosion.md  PLAN-path-to-sota.md  PLAN-performance-optimizations.md  PLAN-phase2-tighter-bounds.md  PLAN-phase3-sensitivity-variation.md  PLAN-phase3-sota-techniques.md  PLAN-soundness-roadmap.md  PLAN-tight-bounds-research.md  PLAN-transformer-verification.md  ROADMAP.md
gamma-crown/references/: .gitignore  README.md
gamma-crown/research/: LITERATURE-SURVEY.md  RESEARCH_REPORT.md
gamma-crown/scripts/: analyze_cifar10_verification.py  assess_vnncomp2021.py  benchmark_acasxu.py  benchmark_backends.py  benchmark_cifar10.py  benchmark_comparison.py  benchmark_gcp_crown_mnistfc.py  benchmark_mnist.py  benchmark_performance.py  benchmark_vs_autolirpa.py  compare_crown_algorithm.py  compare_crown_bounds.py  compare_intermediate_bounds.py  compare_simple_mlp.py  compare_subnetwork_bounds.py  create_math_test_models.py  debug_auto_lirpa_intermediates.py  debug_intermediate_crown_bounds.py  debug_layer_by_layer.py  export_docling_to_onnx.py  export_test_transformer.py  generate_cifar10_benchmark.py  generate_mnist_benchmark.py  generate_test_models.py  isolate_bound_gap.py  run_abcrown_baseline.py  run_acasxu_benchmark.py  run_cifar_resnet_benchmark.py  test_bug_injection.py  test_cnn_flatten.py  test_e2e.py  test_gguf_cli.py  test_maxpool_simple.py  test_maxpool_verification.py  test_numerical_edge_cases.py  test_python_api.py  test_pytorch_cli.py  test_safetensors_cli.py  train_cifar10_classifier.py  train_cifar10_cnn.py  (+4 more)
gamma-crown/tla/: DPLLT_GammaCrown.cfg  DPLLT_GammaCrown.tla  README.md
kani_fast/: .source-commit  Cargo.toml  README.md  ROADMAP.md  TEST_COVERAGE.md  TRUST_FEATURE_REQUEST.md  WORKER_HINT.md  Z4_INTEGRATION_FEEDBACK.md
kani_fast/.cargo/: config.toml
kani_fast/docs/: FEATURE_REQUEST_FROM_Z4_ARCHIMEDES.md  FROM_TRUST_INTEGRATION_NEEDS_2025-12-31.md  FROM_TRUST_PATH_CONDITIONS_2025-12-31.md  FROM_TRUST_URGENT_TIMELINE_2025-12-31.md  FROM_TRUST_WORKER_PROGRESS_2025-12-31.md  FROM_Z4_CHC_FIXED_2026-01-01.md  FROM_Z4_PERFORMANCE_UPDATE_2026-01-02.md  FROM_Z4_TARGETS_MET_2026-01-02.md  LEAN5_REQUIREMENTS.md  PHASES_DETAIL.md  SOUNDNESS_LIMITATIONS.md  TLA2_REQUIREMENTS.md  TRUST_INTEGRATION.md  Z4_REQUIREMENTS.md
kani_fast/scripts/: benchmark_solvers.sh  health_check.sh  run-driver.sh  summarize_driver_tests.sh
lean5/: .gitignore  Cargo.toml  DESIGN_LEAN5DB_FORMAT.md  DESIGN_LEAN5DB_FORMAT_ANALYSIS.md  DESIGN_LEAN5DB_FORMAT_SPEC.md  DESIGN_LEAN5DB_SEARCH.md  DESIGN_LEAN5DB_SOLUTIONS.md  DESIGN_LEAN5DB_TEXT_FORMAT.md  DESIGN_LEAN5DB_UNIFIED.md  DESIGN_LEAN5DB_VERIFICATION.md  DESIGN_LEAN5_KERNEL.md  DESIGN_UNIVERSAL_PROOF_DATABASE.md  DESIGN_UPD_GAPS_AND_SOLUTIONS.md  README.md  ROADMAP.md  ROADMAP_LEAN4_REPLACEMENT.md  TRUST_FEATURE_REQUEST.md  Z4_INTEGRATION_FEEDBACK.md  Z4_INTEGRATION_RESPONSE.md
lean5/archive/: README.md
lean5/docs/: BENCHMARKING.md  DESIGN.md  DESIGN_POLYNOMIAL_COMMITMENTS.md  FEATURE_REQUEST_FROM_Z4_ARCHIMEDES.md  FEATURE_VERIFICATION_ROADMAP.md  KERNEL_COVERAGE.md  LEAN4LEAN_COVERAGE.md  OLEAN_COVERAGE.md  PARSER_COVERAGE.md  PHILOSOPHY.md  TESTING_STRATEGY.md  VERIFICATION_ROADMAP.md  VERUS.md
lean5/mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json
tla2/: .gitignore  Cargo.toml  README.md  ROADMAP.md  pytest.ini
tla2/.cargo/: config.toml
tla2/docs/: AI_OUTPUT_FORMAT.md  AUDIT.md  DESIGN-TRUST-API.md  GAPS.md  TESTING_PLAN.md  Z4_USER_FEEDBACK.md  ecosystem-overview.md  how-this-was-built.md  modernization-vision.md  project-plan.md  refinement-design.md  verification-stack.md
tla2/examples/: Counter.cfg  Counter.tla  MultiAction.cfg  MultiAction.tla  SimpleTheorems.tla  Theorems.tla
tla2/fuzz/: Cargo.toml
tla2/scripts/: benchmark_performance.sh  build_pgo.sh  compare_tlc.sh  compare_with_tlc.sh  diagnose_specs.py  differential_test.sh  differential_test_v2.sh  mass_tlc_compare.sh  test_all_liveness.sh  test_parser_coverage.sh  verify_correctness.sh
tla2/test_specs/: ActionDependentIf.tla  (+72 more)
z4/: Cargo.toml  NOTICE  README.md  ROADMAP.md  TRUST_FEATURE_REQUEST.md  json_to_text.py
(+5541 files in other folders)
