[workspace]
resolver = "2"
exclude = ["examples/kani", "crates/dashprove-backends/tests/kani_test_project"]
members = [
    "crates/dashprove",
    "crates/dashprove-usl",
    "crates/dashprove-backends",
    "crates/dashprove-dispatcher",
    "crates/dashprove-learning",
    "crates/dashprove-ai",
    "crates/dashprove-cli",
    "crates/dashprove-server",
    "crates/dashprove-lsp",
    "crates/dashprove-knowledge",
    "crates/dashprove-bisim",
    "crates/dashprove-async",
    "crates/dashprove-monitor",
    "crates/dashprove-monitor-macros",
    "crates/dashprove-semantic",
    "crates/dashprove-mbt",
    "crates/dashprove-miri",
    "crates/dashprove-platform-api",
    "crates/dashprove-sanitizers",
    "crates/dashprove-fuzz",
    "crates/dashprove-pbt",
    "crates/dashprove-static",
    "crates/dashprove-selfimp",
    "crates/dashprove-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dropbox/dMATH/dashprove"
homepage = "https://github.com/dropbox/dMATH/dashprove"
documentation = "https://docs.rs/dashprove"
keywords = ["verification", "formal-methods", "proof", "theorem-prover", "ai"]
categories = ["development-tools", "mathematics"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web server (for dashprove-server)
axum = { version = "0.7", features = ["ws"] }

# HTTP client (for dashprove client)
reqwest = { version = "0.12", features = ["json"] }

# Auth
jsonwebtoken = "9"

# Internal crates (version required for crates.io publishing)
dashprove = { path = "crates/dashprove", version = "0.1" }
dashprove-usl = { path = "crates/dashprove-usl", version = "0.1" }
dashprove-backends = { path = "crates/dashprove-backends", version = "0.1" }
dashprove-dispatcher = { path = "crates/dashprove-dispatcher", version = "0.1" }
dashprove-learning = { path = "crates/dashprove-learning", version = "0.1" }
dashprove-ai = { path = "crates/dashprove-ai", version = "0.1" }
dashprove-server = { path = "crates/dashprove-server", version = "0.1" }
dashprove-cli = { path = "crates/dashprove-cli", version = "0.1" }
dashprove-lsp = { path = "crates/dashprove-lsp", version = "0.1" }
dashprove-knowledge = { path = "crates/dashprove-knowledge", version = "0.1" }
dashprove-bisim = { path = "crates/dashprove-bisim", version = "0.1" }
dashprove-async = { path = "crates/dashprove-async", version = "0.1" }
dashprove-monitor = { path = "crates/dashprove-monitor", version = "0.1" }
dashprove-monitor-macros = { path = "crates/dashprove-monitor-macros", version = "0.1" }
dashprove-semantic = { path = "crates/dashprove-semantic", version = "0.1" }
dashprove-mbt = { path = "crates/dashprove-mbt", version = "0.1" }
dashprove-miri = { path = "crates/dashprove-miri", version = "0.1" }
dashprove-platform-api = { path = "crates/dashprove-platform-api", version = "0.1" }
dashprove-sanitizers = { path = "crates/dashprove-sanitizers", version = "0.1" }
dashprove-fuzz = { path = "crates/dashprove-fuzz", version = "0.1" }
dashprove-pbt = { path = "crates/dashprove-pbt", version = "0.1" }
dashprove-static = { path = "crates/dashprove-static", version = "0.1" }
dashprove-selfimp = { path = "crates/dashprove-selfimp", version = "0.1" }
dashprove-mcp = { path = "crates/dashprove-mcp", version = "0.1" }

[package]
name = "dashprove-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
dashprove = { path = "crates/dashprove", features = ["remote"] }
dashprove-usl = { path = "crates/dashprove-usl" }
dashprove-backends = { path = "crates/dashprove-backends" }
dashprove-dispatcher = { path = "crates/dashprove-dispatcher" }
dashprove-learning = { path = "crates/dashprove-learning" }
dashprove-ai = { path = "crates/dashprove-ai" }
tokio = { version = "1.0", features = ["full", "test-util"] }
async-trait = "0.1"
serde_json = "1.0"

[[test]]
name = "integration"
path = "tests/integration.rs"
