[workspace]
resolver = "2"
members = [
    "crates/kani-fast",
    "crates/kani-fast-core",
    "crates/kani-fast-counterexample",
    "crates/kani-fast-cli",
    "crates/kani-fast-portfolio",
    "crates/kani-fast-kinduction",
    "crates/kani-fast-incremental",
    "crates/kani-fast-chc",
    "crates/kani-fast-lean5",
    "crates/kani-fast-ai",
    "crates/kani-fast-proof",
    "crates/kani-fast-abstract-interp",
    # kani-fast-compiler requires nightly - build separately with:
    #   cd crates/kani-fast-compiler && cargo build
    # (uses pinned toolchain from rust-toolchain.toml, not generic +nightly)
    # "crates/kani-fast-compiler",
]
exclude = ["examples/*", "crates/kani-fast-compiler"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dropbox/dMATH/kani_fast"
rust-version = "1.75"
authors = ["Andrew Yates <ayates@dropbox.com>"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
num_cpus = "1.16"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# Regex for parsing
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Process execution
which = "4.4"  # Using 4.x to avoid edition 2024 requirements from home 0.5.12
wait-timeout = "0.2"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Testing
tempfile = "3.14"

# File watching
notify = "8.2"

# Internal crates
kani-fast = { path = "crates/kani-fast" }
kani-fast-core = { path = "crates/kani-fast-core" }
kani-fast-counterexample = { path = "crates/kani-fast-counterexample" }
kani-fast-portfolio = { path = "crates/kani-fast-portfolio" }
kani-fast-kinduction = { path = "crates/kani-fast-kinduction" }
kani-fast-incremental = { path = "crates/kani-fast-incremental" }
kani-fast-chc = { path = "crates/kani-fast-chc" }
kani-fast-lean5 = { path = "crates/kani-fast-lean5" }
kani-fast-ai = { path = "crates/kani-fast-ai" }
kani-fast-proof = { path = "crates/kani-fast-proof" }

# AI dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1.5"
hex = "0.4"
dirs = "5.0"
home = "0.5"  # Used by kani-fast-ai for config directory

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
