[workspace]
resolver = "2"
members = [
    "crates/lean5-auto",
    "crates/lean5-c-sem",
    "crates/lean5-cli",
    "crates/lean5-commit",
    "crates/lean5-elab",
    "crates/lean5-fold",
    "crates/lean5-gpu",
    "crates/lean5-kernel",
    "crates/lean5-lake",
    "crates/lean5-lsp",
    "crates/lean5-macro",
    "crates/lean5-olean",
    "crates/lean5-parser",
    "crates/lean5-rust-sem",
    "crates/lean5-server",
    "crates/lean5-verify",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew Yates <ayates@dropbox.com>"]
license = "Apache-2.0"
repository = "https://github.com/dropbox/dMATH/lean5"

[workspace.dependencies]
# Core
thiserror = "2.0"
anyhow = "1.0"

# Data structures
ahash = "0.8"
hashbrown = { version = "0.14", features = ["serde"] }
indexmap = "2.0"
smallvec = { version = "1.11", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"

# Compression
lz4_flex = "0.11"
zstd = { version = "0.13", features = ["zdict_builder"] }

# Async
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# GPU
wgpu = "28"
bytemuck = { version = "1.14", features = ["derive"] }

# Testing
proptest = "1.4"
criterion = "0.8"
tempfile = "3.10"
walkdir = "2.5"

# Parallelism
rayon = "1.10"

# Allocators (optional, for performance testing)
mimalloc = { version = "0.1", default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates (alphabetically ordered)
lean5-auto = { path = "crates/lean5-auto" }
lean5-c-sem = { path = "crates/lean5-c-sem" }
lean5-commit = { path = "crates/lean5-commit" }
lean5-elab = { path = "crates/lean5-elab" }
lean5-fold = { path = "crates/lean5-fold" }
lean5-gpu = { path = "crates/lean5-gpu" }
lean5-kernel = { path = "crates/lean5-kernel" }
lean5-lake = { path = "crates/lean5-lake" }
lean5-lsp = { path = "crates/lean5-lsp" }
lean5-macro = { path = "crates/lean5-macro" }
lean5-olean = { path = "crates/lean5-olean" }
lean5-parser = { path = "crates/lean5-parser" }
lean5-rust-sem = { path = "crates/lean5-rust-sem" }
lean5-server = { path = "crates/lean5-server" }
lean5-verify = { path = "crates/lean5-verify" }

# Arkworks cryptography (for polynomial commitments and folding)
ark-ff = "0.5"
ark-ec = "0.5"
ark-poly = "0.5"
ark-poly-commit = "0.5"
ark-bls12-381 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
rand = "0.8"

# Hashing
sha2 = "0.10"

# Stack management
stacker = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
