[workspace]
resolver = "2"
members = [
    "crates/tla-core",
    "crates/tla-check",
    "crates/tla-prove",
    "crates/tla-codegen",
    "crates/tla-runtime",
    "crates/tla-smt",
    "crates/tla-zenon",
    "crates/tla-cert",
    "crates/tla-lsp",
    "crates/tla-cli",
    "crates/tla-wire",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew Yates"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dropbox/dMATH/tla2"
rust-version = "1.75"

[workspace.dependencies]
# Core
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing
logos = "0.14"
rowan = "0.15"
tree-sitter = "0.22"

# Async
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"

# Errors and diagnostics
ariadne = "0.4"
miette = { version = "7.0", features = ["fancy"] }

# Data structures
indexmap = "2.0"
rustc-hash = "1.1"
dashmap = "5.0"
parking_lot = "0.12"
crossbeam = "0.8"

# Numbers
num-bigint = "0.4"
num-traits = "0.2"

# SMT
z3 = "0.12"

# LSP
tower-lsp = "0.20"

# Testing
proptest = "1.0"
insta = "1.0"
criterion = "0.5"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.profiling]
inherits = "release"
debug = 1
strip = "none"

[profile.dev]
# Faster builds during development
debug = 1

[profile.bench]
lto = true
