[workspace]
resolver = "2"
members = [
    "crates/z4",
    "crates/z4-core",
    "crates/z4-sat",
    "crates/z4-qbf",
    "crates/z4-maxsat",
    "crates/z4-allsat",
    "crates/z4-circuits",
    "crates/z4-proof-complexity",
    "crates/z4-barriers",
    "crates/z4-dpll",
    "crates/z4-frontend",
    "crates/z4-proof",
    "crates/z4-tla-bridge",
    "crates/z4-lean-bridge",
    "crates/z4-chc",
    "crates/z4-theories/euf",
    "crates/z4-theories/lra",
    "crates/z4-theories/lia",
    "crates/z4-theories/bv",
    "crates/z4-theories/arrays",
    "crates/z4-theories/strings",
    "crates/z4-theories/fp",
    "crates/z4-theories/dt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dropbox/dMATH/z4"
authors = ["Andrew Yates"]

[workspace.lints.rust]
# Kani model checker sets the 'kani' cfg flag
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.dependencies]
# Core dependencies
hashbrown = "0.15"
bumpalo = "3.16"
parking_lot = "0.12"
rayon = "1.10"
thiserror = "2.0"
tracing = "0.1"

# Numeric
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Parsing
logos = "0.15"

# Testing/Benchmarking
criterion = "0.5"
proptest = "1.5"

# Internal crates
z4-core = { path = "crates/z4-core" }
z4-sat = { path = "crates/z4-sat" }
z4-dpll = { path = "crates/z4-dpll" }
z4-frontend = { path = "crates/z4-frontend" }
z4-proof = { path = "crates/z4-proof" }
z4-tla-bridge = { path = "crates/z4-tla-bridge" }
z4-euf = { path = "crates/z4-theories/euf" }
z4-lra = { path = "crates/z4-theories/lra" }
z4-lia = { path = "crates/z4-theories/lia" }
z4-bv = { path = "crates/z4-theories/bv" }
z4-arrays = { path = "crates/z4-theories/arrays" }
z4-strings = { path = "crates/z4-theories/strings" }
z4-fp = { path = "crates/z4-theories/fp" }
z4-dt = { path = "crates/z4-theories/dt" }
z4-chc = { path = "crates/z4-chc" }
z4-qbf = { path = "crates/z4-qbf" }
z4-maxsat = { path = "crates/z4-maxsat" }
z4-allsat = { path = "crates/z4-allsat" }
z4-circuits = { path = "crates/z4-circuits" }
z4-proof-complexity = { path = "crates/z4-proof-complexity" }
z4-barriers = { path = "crates/z4-barriers" }
z4-lean-bridge = { path = "crates/z4-lean-bridge" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "thin"
