[package]
name = "dashprove-ai"
description = "AI-assisted proof generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
dashprove-usl = { workspace = true }
dashprove-backends = { workspace = true }
dashprove-learning = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
proptest = "1.5"

[[bench]]
name = "strategy"
harness = false
