[package]
name = "dashprove-async"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Async/concurrent state machine verification with Loom for DashProve"

[dependencies]
async-trait = "0.1"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "time", "macros"] }
tracing = "0.1"
regex = "1"
tempfile = "3"

# Optional dependency for concurrency testing
loom = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
loom = "0.7"
proptest = "1"

[features]
# Enable loom for concurrency testing (also adds loom as a dependency)
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
