[package]
name = "dashprove-backends"
description = "Verification backend implementations (LEAN 4, TLA+, Kani, Alloy)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
dashprove-usl = { workspace = true }
dashprove-static = { workspace = true }
dashprove-miri = { workspace = true }
dashprove-pbt = { workspace = true }
dashprove-sanitizers = { workspace = true }
dashprove-fuzz = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = "3.14"
regex = "1.11"
which = "7.0"
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
dashprove-dispatcher = { workspace = true }
criterion = { workspace = true }
proptest = "1.5"

[[bench]]
name = "counterexamples"
harness = false
