[package]
name = "dashprove-bisim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bisimulation and behavioral equivalence checking for DashProve"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "fs"] }
tracing = "0.1"
similar = "2.0"  # For text diffing

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-test = "0.4"
tempfile = "3"
proptest = "1.4"
