[package]
name = "dashprove-cli"
description = "DashProve command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
name = "dashprove_cli"
path = "src/lib.rs"

[[bin]]
name = "dashprove"
path = "src/main.rs"

[dependencies]
dashprove = { workspace = true }
dashprove-ai = { workspace = true }
dashprove-bisim = { workspace = true }
dashprove-knowledge = { workspace = true }
dashprove-backends = { workspace = true }
dashprove-async = { workspace = true }
dashprove-monitor = { workspace = true }
dashprove-mbt = { workspace = true }
dashprove-miri = { workspace = true }
dashprove-selfimp = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
dirs = "5"
criterion = { workspace = true }
serial_test = "3.1"
tokio = { workspace = true, features = ["rt", "time", "macros"] }
dashprove-selfimp = { workspace = true }

[[bench]]
name = "parsing"
harness = false
