[package]
name = "dashprove-dispatcher"
description = "Intelligent backend selection and parallel verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
dashprove-usl = { workspace = true }
dashprove-backends = { workspace = true }
dashprove-ai = { workspace = true }
dashprove-knowledge = { workspace = true }
dashprove-learning = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }
async-trait = { workspace = true }
proptest = "1.5"
serde_json = { workspace = true }

[[bench]]
name = "dispatcher"
harness = false
