[package]
name = "dashprove-knowledge"
version = "0.1.0"
edition = "2021"
description = "Knowledge base and documentation collection for DashProve verification backends"
license = "Apache-2.0"

[dependencies]
# HTTP client for fetching documentation
reqwest = { version = "0.11", features = ["json", "stream"] }

# HTML parsing and conversion
scraper = "0.18"
html2text = "0.12"

# PDF text extraction
pdf-extract = { version = "0.7", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Rate limiting
governor = "0.6"

# URL handling
url = "2"

# Git operations
git2 = { version = "0.18", optional = true }

# File system utilities
walkdir = "2"
tempfile = "3"

# Directories
dirs = "5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Vector operations for embeddings
ndarray = "0.15"

# URL encoding
urlencoding = "2"

# Regular expressions
regex = "1"

# Internal crates
dashprove-backends = { path = "../dashprove-backends", version = "0.1" }

# Optional: FAISS for vector search (requires system library)
# faiss = { version = "0.12", optional = true }

[features]
default = []
pdf = ["pdf-extract"]
git = ["git2"]
full = ["pdf", "git"]

[[bin]]
name = "collect-knowledge"
path = "src/bin/collect.rs"

[[bin]]
name = "collect-exhaustive"
path = "src/bin/collect_exhaustive.rs"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1"

[lints.rust]
# Allow kani cfg for Kani verification proofs
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
