[package]
name = "dashprove-lsp"
description = "Language Server Protocol implementation for USL (Unified Specification Language)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["lsp", "language-server", "verification", "formal-methods"]
categories = ["development-tools", "ide"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[dependencies]
# LSP implementation
tower-lsp = "0.20"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Internal crates
dashprove-usl = { workspace = true }
dashprove-knowledge = { workspace = true }
dashprove-backends = { workspace = true }

# Paths and environment
dirs = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
proptest = "1.5"
futures-util = "0.3"
tower = { version = "0.4", features = ["util"] }
criterion = { workspace = true }

[[bin]]
name = "dashprove-lsp"
path = "src/main.rs"

[[bench]]
name = "lsp"
harness = false
