[package]
name = "dashprove-mbt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Model-based test generation from TLA+ specifications for DashProve"

[dependencies]
# Internal crates
dashprove-usl = { path = "../dashprove-usl", version = "0.1" }
dashprove-backends = { path = "../dashprove-backends", version = "0.1" }
dashprove-async = { path = "../dashprove-async", version = "0.1" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Random number generation for test generation
rand = "0.8"

# Collections
indexmap = { version = "2.0", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
proptest = "1.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }
