[package]
name = "dashprove-mcp"
description = "Model Context Protocol (MCP) server for DashProve AI agent integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
name = "dashprove_mcp"
path = "src/lib.rs"

[[bin]]
name = "dashprove-mcp"
path = "src/main.rs"

[dependencies]
dashprove = { workspace = true }
dashprove-usl = { workspace = true }
dashprove-backends = { workspace = true }
dashprove-ai = { workspace = true }
dashprove-knowledge = { workspace = true }
dashprove-dispatcher = { workspace = true }
dashprove-learning = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
