[package]
name = "dashprove-monitor-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for dashprove-monitor runtime monitoring"
keywords = ["verification", "monitoring", "macro", "derive", "instrumentation"]
categories = ["development-tools::procedural-macro-helpers"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
dashprove-monitor = { path = "../dashprove-monitor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
