[package]
name = "dashprove-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime monitoring and trace recording for DashProve"

[dependencies]
# Internal crates
dashprove-async = { path = "../dashprove-async", version = "0.1" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
proptest = "1"

[features]
default = []
# Enable proc-macro support (requires dashprove-monitor-macros)
macros = ["dep:dashprove-monitor-macros"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies.dashprove-monitor-macros]
path = "../dashprove-monitor-macros"
version = "0.1"
optional = true
