[package]
name = "dashprove-platform-api"
version = "0.1.0"
edition = "2021"
description = "Platform API constraint verification for external API contracts"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
petgraph = "0.6"
regex = "1.10"

[dev-dependencies]
insta = "1.34"
proptest = "1.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
