[package]
name = "dashprove-sanitizers"
version = "0.1.0"
edition = "2021"
description = "Rust sanitizer backends (ASAN, MSAN, TSAN, LSAN) for DashProve"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["process", "fs"] }
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
proptest = "1.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
