[package]
name = "dashprove-selfimp"
description = "Verified self-improvement infrastructure for DashProve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["verification", "formal-methods", "self-improvement", "ai-safety"]
categories = ["development-tools", "mathematics"]

[dependencies]
# Internal crates
dashprove-usl = { workspace = true }
dashprove-backends = { workspace = true }
dashprove-dispatcher = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Cryptographic hashing for proof certificates
sha2 = "0.10"
hex = "0.4"

# Pattern matching for property TTL overrides
glob = "0.3"

# Compression for cache snapshots
flate2 = "1.0"

# Async runtime
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

[features]
default = []
