[package]
name = "dashprove-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Semantic and fuzzy verification for LLM outputs in DashProve"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[dependencies]
# Internal crates
dashprove-learning = { path = "../dashprove-learning", version = "0.1" }
dashprove-usl = { path = "../dashprove-usl", version = "0.1" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Random number generation for statistical tests
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
proptest = "1.4"
