[package]
name = "dashprove-server"
description = "DashProve REST API server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
name = "dashprove_server"
path = "src/lib.rs"

[[bin]]
name = "dashprove-server"
path = "src/main.rs"

[dependencies]
dashprove = { workspace = true }
dashprove-usl = { workspace = true }
dashprove-backends = { workspace = true }
dashprove-learning = { workspace = true }
dashprove-ai = { workspace = true }
dashprove-knowledge = { workspace = true }
async-trait = { workspace = true }
dirs = "5.0"
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tokio-tungstenite = "0.24"
proptest = "1.5"
criterion = { workspace = true }

[[bench]]
name = "server"
harness = false
