[package]
name = "dashprove-static"
version = "0.1.0"
edition = "2021"
description = "Rust static analysis backends (Clippy, semver-checks, audit, deny, vet, mutants) for DashProve"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["process", "fs"] }
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.10"
proptest = "1.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }
