[package]
name = "dashprove"
description = "Unified AI-native verification platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[features]
default = []
# Enable remote HTTP client for connecting to DashProve server
remote = ["reqwest", "chrono", "jsonwebtoken"]

[dependencies]
dashprove-ai = { workspace = true }
dashprove-usl = { workspace = true }
dashprove-backends = { workspace = true }
dashprove-dispatcher = { workspace = true }
dashprove-learning = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.5"
tempfile = "3.15"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "benchmarks"
harness = false
